# vsvulkan

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vsvulkan.sln  vsvulkan.vcxproj  vsvulkandoxy
html/: annotated.html  annotated_dup.js  camera_8cpp.html  camera_8h.html  camera_8h_source.html  class_camera.html  class_pipeline_builder-members.html  class_pipeline_builder.html  class_pipeline_builder.js  class_vulkan_engine-members.html  class_vulkan_engine.html  class_vulkan_engine.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  imguiloader_8cpp.html  imguiloader_8cpp.js  imguiloader_8h.html  imguiloader_8h.js  imguiloader_8h_source.html  index.html  initial_8cpp.html  initial_8cpp.js  main_8cpp.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  (+124 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+33 more)
latex/: annotated.tex  camera_8cpp.tex  camera_8h.tex  camera_8h_source.tex  class_camera.tex  class_pipeline_builder.tex  class_vulkan_engine.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  imguiloader_8cpp.tex  imguiloader_8h.tex  imguiloader_8h_source.tex  initial_8cpp.tex  main_8cpp.tex  namespaces.tex  namespacevkinit.tex  namespacevkutil.tex  refman.tex  sdlwindow_8cpp.tex  sdlwindow_8h.tex  sdlwindow_8h_source.tex  struct_allocated_buffer.tex  struct_allocated_image.tex  struct_compute_effect.tex  struct_compute_push_constants.tex  struct_deletion_queue.tex  struct_descriptor_allocator.tex  struct_descriptor_allocator_1_1_pool_size_ratio.tex  struct_descriptor_layout_builder.tex  struct_frame_data.tex  struct_g_p_u_draw_push_constants.tex  struct_g_p_u_mesh_buffers.tex  struct_geo_surface.tex  struct_instanced_renderer.tex  struct_mesh_asset.tex  struct_pipeline_description.tex  struct_quad_instance.tex  struct_vertex.tex  struct_vertex_input_description.tex  struct_vertex_input_entry.tex  (+31 more)
shaders/: 2d.frag  2d.vert  2d.vert.spv  CMakeLists.txt  base.frag  base.vert
src/: CMakeLists.txt  imguiloader.cpp  imguiloader.h  initial.cpp  sdlwindow.cpp  sdlwindow.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vulkanrender.cpp  vulkanrender.h
